clusters/12c5ea3f-a5b8-4e82-8fe5-a663d9724215/argocd/foundations/6020d0f0-9700-40cb-a026-f4b3ed9aecf8.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc317-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 6020d0f0-9700-40cb-a026-f4b3ed9aecf8
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8e56a273-8878-4c7d-8db7-0203dcabeeed
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc317-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 6020d0f0-9700-40cb-a026-f4b3ed9aecf8
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8e56a273-8878-4c7d-8db7-0203dcabeeed
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc317-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 6020d0f0-9700-40cb-a026-f4b3ed9aecf8
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 8e56a273-8878-4c7d-8db7-0203dcabeeed
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
