clusters/12c5ea3f-a5b8-4e82-8fe5-a663d9724215/argocd/foundations/bdf8c6f7-9566-4381-849d-c12136e16e97.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc316-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bdf8c6f7-9566-4381-849d-c12136e16e97
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 4400424f-820d-43bb-ae26-f397af3e4d62
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc316-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bdf8c6f7-9566-4381-849d-c12136e16e97
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 4400424f-820d-43bb-ae26-f397af3e4d62
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc316-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bdf8c6f7-9566-4381-849d-c12136e16e97
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 4400424f-820d-43bb-ae26-f397af3e4d62
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
